// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[<Link />] matches to snapshot 1`] = `
<Link__StyledLink
  color="#fff"
>
  I am a Link
</Link__StyledLink>
`;

exports[`[<Link />] when pass props when pass color prop 1`] = `
<Link__StyledLink
  color="#283583"
>
  I am a Link with color
</Link__StyledLink>
`;
